# Cold-Start-Prompt-E-Processes

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
configs/: arms_algorithmic_only.yaml  arms_balanced_only.yaml  arms_baseline_only.yaml  arms_cautious_only.yaml  arms_domain_expert_only.yaml  arms_exploratory_only.yaml  arms_explorer_only.yaml  arms_gitlab_strong.yaml  arms_initial.yaml  arms_junior_reactive_only.yaml  arms_overthinker_only.yaml  arms_planner_only.yaml  arms_rapid_only.yaml  arms_smoke_shopping.yaml  arms_verifier_only.yaml  axes.yaml  experiment_500.yaml  pilot_toy.yaml  pilot_toy_upward.yaml  sanity.yaml  template.jinja  template_gitlab.jinja  webarena_gmail.yaml  webarena_gmail_adaptive_spruce_120.yaml  webarena_gmail_adaptive_spruce_120_rep2.yaml  webarena_gmail_adaptive_spruce_120_rep3.yaml  webarena_gmail_adaptive_spruce_60.yaml  webarena_gmail_calibration.yaml  webarena_gmail_pair_algorithmic_60.yaml  webarena_gmail_pair_balanced_60.yaml  webarena_gmail_pair_baseline_60.yaml  webarena_gmail_pair_cautious_60.yaml  webarena_gmail_pair_domain_expert_60.yaml  webarena_gmail_pair_exploratory_60.yaml  webarena_gmail_pair_explorer_60.yaml  webarena_gmail_pair_junior_reactive_60.yaml  webarena_gmail_pair_overthinker_60.yaml  webarena_gmail_pair_planner_60.yaml  webarena_gmail_pair_rapid_60.yaml  webarena_gmail_pair_verifier_60.yaml  (+39 more)
docs/: adaptive_spruce_120_rep2_status.md  adaptive_spruce_120_rep3_status.md  adaptive_sweep_120_status.md  adaptive_sweep_status.md  paired_sweep_shopping_80_status.md  paired_sweep_shopping_status.md  paired_sweep_status.md  research_process.md  runbook.md  shopping_adaptive_spruce_240_rep2_status.md  shopping_adaptive_spruce_240_rep3_status.md  shopping_adaptive_spruce_240_status.md  shopping_uniform_multiarm_240_rep2_status.md  shopping_uniform_multiarm_240_rep3_status.md  shopping_uniform_multiarm_240_status.md  uniform_multiarm_120_rep2_status.md  uniform_multiarm_120_rep3_status.md  uniform_multiarm_120_status.md  uniform_multiarm_status.md
experiments/: run_gitlab_strong_arm.py
scripts/: analyze_calibration.py  check_run.sh  compare_allocations.py  finalize_adaptive_spruce_120.sh  finalize_adaptive_sweep.sh  finalize_current_policy_run.sh  finalize_paired_sweep.sh  finalize_paired_sweep_shopping.sh  finalize_policy_run.sh  finalize_uniform_multiarm.sh  finalize_uniform_multiarm_120.sh  inspect_shopping_task_bank.py  resume_adaptive_spruce.sh  resume_adaptive_spruce_120.sh  resume_paired_arms_3_4.sh  resume_paired_arms_5_6.sh  resume_paired_first_two_arms.sh  resume_paired_remaining_arms.sh  resume_policy_run.sh  resume_uniform_multiarm.sh  resume_uniform_multiarm_120.sh  resume_uniform_then_adaptive.sh  resume_uniform_then_adaptive_120.sh  resume_uniform_then_adaptive_120_replicates.sh  resume_webarena_gmail.sh  run_120_followup_replicates.sh  run_adaptive_spruce.sh  run_calibration.sh  run_paired_first_two_arms.sh  run_paired_shopping_all_arms.sh  run_paired_shopping_arm.sh  run_paired_shopping_smoke.sh  run_uniform_then_adaptive.sh  run_webarena_gmail_full.sh  (+15 more)
(+157 files in other folders)
