[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cold-start"
version = "0.1.0"
description = "Sequential evaluation of LLM cold-start prompts via multi-armed hypothesis testing by betting"
requires-python = ">=3.11"
readme = "README.md"
authors = [
    {name = "Sanjay Mukhyala"},
    {name = "Ian Waudby-Smith"},
]
dependencies = [
    "anthropic>=0.40,<1.0",
    "numpy>=2.0",
    "scipy>=1.13",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "jinja2>=3.1",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
cold-start-run = "cold_start.cli.run:main"
cold-start-report = "cold_start.cli.report:main"
cold-start-smoke = "cold_start.cli.smoke:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
